[project]
name = "jit"
version = "0.1.0"
description = "Add your description here"
requires-python = "~=3.13.0"
dependencies = [
    "torch~=2.10.0",
    "torchvision",
    "xformers",
    "flash-attn",
    "numpy>=2.4.5",
    "tqdm>=4.67.3",
    "torch-fidelity",
    "einops>=0.8.2",
    "pillow>=12.2.0",
    "opencv-python>=4.13.0.92",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
triton = { index = "pytorch" }
xformers = { index = "pytorch" }
flash-attn = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.16/flash_attn-2.8.3%2Bcu128torch2.10-cp313-cp313-linux_x86_64.whl" }
torch-fidelity = { git = "https://github.com/LTH14/torch-fidelity.git", rev = "master" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
